<resources>
    <string name="app_name">SPECIES</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="text">Text</string>
    <string name="no_acc_sign_up">Don\'t have an account ? Sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="hav_acc_sign_p">Have an account? Sign In</string>
    <string name="qr_code_found">QR Code Found</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome,</string>
    <string name="change_formaldehyde">Change Formaldehyde</string>
    <string name="last_changed_on">Last Changed on :</string>
    <string name="expected_change_on">Expected Change on :</string>
    <string name="cupboard_number">Cupboard Number :</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="common_name">Common Name</string>
    <string name="scientific_name">Scientific Name</string>
    <string name="kingdom">Kingdom</string>
    <string name="infrakingdom">Infra-Kingdom</string>
    <string name="grade">Grade</string>
    <string name="division">Division</string>
    <string name="sub_division">Sub-Division</string>
    <string name="subkingdom">Subkingdom</string>
    <string name="header">Header</string>
    <string name="api">https://script.googleusercontent.com/macros/echo?user_content_key=YM33XjNXzczJMqGV9DyBNk19kQ0oblVLOP-R-cxpWMe3TXLhs1Zjkmt3wbWgJUiyAC1L4LZhNTZF-KO343eP19SR3wP-djVgm5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnNFki3g1hL3IUOyN12gWNmVBz2p2TKXc9Xuv3WMU4Wnz1LsR9TGQAsYlZRA1hBWNPk8_MUtqX4Zwp4r-nmUQb9Tx90esvHgeXA&amp;lib=MbgrK457YjWEMRj1RpcABUG3CjCSjDOnU</string>
    <string name="testapi">https://script.googleusercontent.com/macros/echo?user_content_key=0J5tuct4yFB2g6fEWdj_JEXbJ5hHLoQZflDRM1U8g_iii8fS6Nd9Sb810E0MK4pkEtXONm4T19c-aMVlYFHY62ILEPD0aHIAm5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnISMKmT4sc-oYr2XF2gzS2kVzK3LJnQf1PUbGcvJ9F1imRpjEuoH3KBIxBXgLlSBCu9v9620l5oJVMnCcIoHKO2DwEENJfcyXNz9Jw9Md8uu&amp;lib=MafhO8DCDQWgRY--MA9fA4s4nyNeH4Rra</string>
    <string name="more">More ...</string>
    <string name="series">Series</string>
    <string name="cohort">Cohort</string>
    <string name="reproductive_image">Reproductive Image</string>
    <string name="morphology_image">Morphology Image</string>
</resources>