<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/idLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/app_name"
                android:padding="5dp"
                android:src="@drawable/specieslogo"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/idSignUpHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idLogo"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_margin="5dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idNameSignUpTV"
                android:layout_below="@id/idSignUpHeader"
                android:text="@string/name"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_margin="5dp" />

            <EditText
                android:id="@+id/idNameSignUpET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idNameSignUpTV"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:autofillHints="name"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idEmailSignUpTV"
                android:layout_below="@id/idNameSignUpET"
                android:text="@string/email"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_margin="5dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idEmailSignUpET"
                android:layout_below="@id/idEmailSignUpTV"
                android:layout_margin="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idPasswordSignUpTV"
                android:layout_below="@id/idEmailSignUpET"
                android:text="@string/password"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_margin="5dp" />

            <EditText
                android:id="@+id/idPasswordSignUpET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idPasswordSignUpTV"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword" />
            <TextView
                android:id="@+id/idForgotPasswordSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/idPasswordSignUpET"
                android:text="@string/forgot_password"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/idSignUpBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idForgotPasswordSignUp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/sign_up" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idText"
                android:layout_below="@id/idSignUpBTN"
                android:text="@string/or"
                android:textAlignment="center"
                android:textSize="11sp"
                android:textStyle="normal"
                android:padding="5dp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/text"
                android:layout_margin="5dp"
                android:textSize="18sp"
                android:layout_below="@id/idText"/>


            <TextView
                android:id="@+id/idSignUpPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/google_button"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/hav_acc_sign_p"
                android:textAlignment="center"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>




</RelativeLayout>