<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/idLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/app_name"
                android:padding="5dp"
                android:src="@mipmap/ic_launcher"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/idSignInHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idLogo"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idEmailSignInTV"
                android:layout_below="@id/idSignInHeader"
                android:text="@string/email"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_margin="5dp" />

            <EditText
                android:id="@+id/idEmailSignInET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idEmailSignInTV"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idPasswordSignInTV"
                android:layout_below="@id/idEmailSignInET"
                android:text="@string/password"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_margin="5dp" />

            <EditText
                android:id="@+id/idPasswordSignInET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idPasswordSignInTV"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp" />
            <TextView
                android:id="@+id/idForgotPasswordSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/idPasswordSignInET"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/forgot_password" />

            <Button
                android:id="@+id/idSignInBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idForgotPasswordSignIn"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/sign_in" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idText"
                android:layout_below="@id/idSignInBTN"
                android:text="@string/or"
                android:textAlignment="center"
                android:textSize="11sp"
                android:textStyle="normal"
                android:padding="5dp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idText"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/text"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/idSignInPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/google_button"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/no_acc_sign_up"
                android:textAlignment="center"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>




</RelativeLayout>