<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MaintenancePanel">

    <TextView
        android:id="@+id/idMaintenancePanelHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Maintenance Panel"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/idLastChangeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_changed_on"
        android:layout_below="@+id/idMaintenancePanelHeader"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/idLastChangeData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idMaintenancePanelHeader"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@+id/idLastChangeHeader"
        android:text="12/1/2020"
        android:textAlignment="viewEnd" />

    <TextView
        android:id="@+id/idExpectedChangeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idLastChangeHeader"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/expected_change_on" />

    <TextView
        android:id="@+id/idExpectedChangeData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idLastChangeHeader"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/idExpectedChangeHeader"
        android:text="12/1/2020"
        android:textAlignment="viewEnd" />

    <TextView
        android:id="@+id/idCupboardNumberHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cupboard_number"
        android:layout_below="@+id/idExpectedChangeHeader"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/idCupboardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idExpectedChangeHeader"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/idCupboardNumberHeader"
        android:text="1"
        android:textAlignment="viewEnd" />
    <Button
        android:id="@+id/idChangedTodayBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Changed Today"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />


</RelativeLayout>