<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpecimenDetails">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/idSpecimenImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/idSpecimenCommonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_name"
            android:layout_below="@id/idSpecimenImage"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idSpecimenSciName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scientific_name"
            android:layout_below="@id/idSpecimenCommonName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idKingdom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kingdom"
            android:layout_below="@id/idSpecimenSciName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idSubKingdom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subkingdom"
            android:layout_below="@id/idKingdom"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idInfraKingdom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infrakingdom"
            android:layout_below="@id/idSubKingdom"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idGrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade"
            android:layout_below="@id/idInfraKingdom"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/idDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idGrade"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/division" />
        <TextView
            android:id="@+id/idSubDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sub Division"
            android:layout_below="@id/idDivision"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idPhylum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phylum"
            android:layout_below="@id/idSubDivision"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Group"
            android:layout_below="@id/idPhylum"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idSubPhylum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sub-Phylum"
            android:layout_below="@id/idGroup"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idSuperClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Super-Class"
            android:layout_below="@id/idSubPhylum"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Class"
            android:layout_below="@id/idSuperClass"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idSubClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sub-Class"
            android:layout_below="@id/idClass"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idInfraClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Infra-Class"
            android:layout_below="@id/idSubClass"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idSuperOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Super-Order"
            android:layout_below="@id/idInfraClass"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Order"
            android:layout_below="@id/idSuperOrder"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idSubOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sub-Order"
            android:layout_below="@id/idOrder"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idInfraOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Infra-Order"
            android:layout_below="@id/idSubOrder"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Family"
            android:layout_below="@id/idInfraOrder"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idGenus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Genus"
            android:layout_below="@id/idFamily"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description"
            android:layout_below="@id/idGenus"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/idReferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="References"
            android:layout_below="@id/idDescription"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/idAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Play Audio"
            android:layout_below="@id/idReferences"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/idView3DModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View 3D Model"
            android:layout_below="@id/idReferences"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"/>
        <Button
            android:id="@+id/idExternalLinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="External Links"
            android:layout_below="@id/idAudio"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"/>

    </RelativeLayout>


</ScrollView>